# newsletter-subscription

./: Cargo.toml  readme.md
.github/workflows/: general.yml
src/: lib.rs  main.rs
tests/: health_check.rs
