[package]
name = "subscribers"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "subscribers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
reqwest = "0.11.25"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.197", features = ["derive"] }
config = "0.14.0"
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.7.0", features = ["v4"] }
chrono = { version = "0.4.35", default-features = false, features = ["clock"] }

[dev-dependencies]
reqwest = { version = "0.11.25", features = ["json"] }


